# TomoSNR

./: .gitignore  README.md  pyproject.toml  setup.py
example/: PlumeProbabilities.ipynb
example/data/: .gitattributes  locs.yml
src/: __init__.py  command.py  random_realisations.py  utils.py
src/masks/: 14_tile_0008.fits  14_tile_0012.fits  14_tile_0015.fits  14_tile_0022.fits  14_tile_0023.fits  14_tile_0026.fits  14_tile_0031.fits  14_tile_0032.fits  14_tile_0038.fits  14_tile_0043.fits  14_tile_0046.fits  14_tile_0049.fits  14_tile_0051.fits  14_tile_0061.fits  14_tile_0063.fits  14_tile_0073.fits  14_tile_0074.fits  14_tile_0078.fits  14_tile_0099.fits  14_tile_0101.fits  14_tile_0106.fits  14_tile_0109.fits  14_tile_0115.fits  14_tile_0121.fits  14_tile_0131.fits  14_tile_0135.fits  14_tile_0138.fits  14_tile_0144.fits  14_tile_0148.fits  14_tile_0149.fits  14_tile_0152.fits  14_tile_0166.fits  14_tile_0169.fits  14_tile_0172.fits  14_tile_0173.fits  14_tile_0175.fits  14_tile_0181.fits  14_tile_0185.fits  14_tile_0194.fits  14_tile_0201.fits  (+793 more)
tomosnr/: __init__.py  main.py  random_realisations.py  utils.py
tomosnr/tiles/: 14_tile_0001.fits  14_tile_0009.fits  14_tile_0013.fits  14_tile_0014.fits  14_tile_0024.fits  14_tile_0029.fits  14_tile_0034.fits  14_tile_0042.fits  14_tile_0044.fits  14_tile_0047.fits  14_tile_0056.fits  14_tile_0057.fits  14_tile_0058.fits  14_tile_0059.fits  14_tile_0062.fits  14_tile_0066.fits  14_tile_0067.fits  14_tile_0068.fits  14_tile_0071.fits  14_tile_0079.fits  14_tile_0080.fits  14_tile_0087.fits  14_tile_0092.fits  (+349 more)
(+409 files in other folders)
